v.60 fixed more spacing

--- a/src/sudoku-ui.css
+++ b/src/sudoku-ui.css
@@ -36,7 +36,7 @@ input[type="button"] {
   background: gainsboro;
   border: 2px solid white;
   font-size: 12px;
-  padding: 4px 8px;
+  padding: 3px 8px;
   border-radius: 8px; }
 input[type="button"]:hover {
   background: silver; }
@@ -53,7 +53,7 @@ table.timescore {
   border-collapse: collapse;
   width: 450px; }
 table.timescore td {
-  font: 10pt "Open Sans";
+  font: 12pt "Open Sans";
   font-weight: 800; }
 table.timescore .timer {
   display: none; }
@@ -69,7 +69,8 @@ td.colorkey-cell:hover {
   border: 1px solid black; }
 table.numberkey {
   border-collapse: no-collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+  margin: 0 30px; }
 td.numberkey-cell {
   background: silver;
   width: 46px; height: 46px;
@@ -145,7 +146,7 @@ img.sudoku-border {
 div.sudoku-popup {
   position: absolute;
   height: 42px; width: 220px;
-  font: 27px 'Open Sans';
+  font: 30px 'Open Sans';
   font-weight: 800;
   cursor: default;
   text-align: center;
